tests/algorithms/x/Elixir/data_structures/linked_list/doubly_linked_list.exs
# Code generated by Mochi transpiler 2025-08-07 16:23 +0700
defmodule Main do
  defp _bench_now() do
    System.monotonic_time(:microsecond)
  end
  defp _mem() do
    :erlang.process_info(self(), :memory) |> elem(1)
  end
  defp _len(x) do
    cond do
      x == nil -> 0
      is_binary(x) -> String.length(x)
      true -> length(x)
    end
  end
  def empty_list() do
    try do
      throw {:return, %{data: []}}
    catch
      {:return, val} -> val
    end
  end
  def length(list) do
    try do
      throw {:return, _len(Map.get(list, :data, []))}
    catch
      {:return, val} -> val
    end
  end
  def is_empty(list) do
    try do
      throw {:return, _len(Map.get(list, :data, [])) == 0}
    catch
      {:return, val} -> val
    end
  end
  def to_string(list) do
    try do
      if _len(Map.get(list, :data, [])) == 0 do
        throw {:return, ""}
      end
      s = Kernel.to_string(Enum.at(list.data, 0))
      i = 1
      while_fun = fn while_fun, i, s ->
        if i < _len(Map.get(list, :data, [])) do
          s = ((s <> "->") <> Kernel.to_string(Enum.at(list.data, i)))
          i = i + 1
          while_fun.(while_fun, i, s)
        else
          {i, s}
        end
      end
      {i, s} = try do
          while_fun.(while_fun, i, s)
        catch
          {:break, {i, s}} -> {i, s}
        end

      throw {:return, s}
    catch
      {:return, val} -> val
    end
  end
  def insert_nth(list, index, value) do
    try do
      if index < 0 || index > _len(Map.get(list, :data, [])) do
        raise("index out of range")
      end
      res = []
      i = 0
      while_fun_2 = fn while_fun_2, i, res ->
        if i < index do
          res = (res ++ [Enum.at(list.data, i)])
          i = i + 1
          while_fun_2.(while_fun_2, i, res)
        else
          {i, res}
        end
      end
      {i, res} = try do
          while_fun_2.(while_fun_2, i, res)
        catch
          {:break, {i, res}} -> {i, res}
        end

      res = (res ++ [value])
      while_fun_3 = fn while_fun_3, i, res ->
        if i < _len(Map.get(list, :data, [])) do
          res = (res ++ [Enum.at(list.data, i)])
          i = i + 1
          while_fun_3.(while_fun_3, i, res)
        else
          {i, res}
        end
      end
      {i, res} = try do
          while_fun_3.(while_fun_3, i, res)
        catch
          {:break, {i, res}} -> {i, res}
        end

      throw {:return, %{data: res}}
    catch
      {:return, val} -> val
    end
  end
  def insert_head(list, value) do
    try do
      throw {:return, insert_nth(list, 0, value)}
    catch
      {:return, val} -> val
    end
  end
  def insert_tail(list, value) do
    try do
      throw {:return, insert_nth(list, _len(Map.get(list, :data, [])), value)}
    catch
      {:return, val} -> val
    end
  end
  def delete_nth(list, index) do
    try do
      if index < 0 || index >= _len(Map.get(list, :data, [])) do
        raise("index out of range")
      end
      res = []
      i = 0
      removed = 0
      while_fun_4 = fn while_fun_4, i, removed, res ->
        if i < _len(Map.get(list, :data, [])) do
          {removed, res} = if i == index do
            removed = Enum.at(list.data, i)
            {removed, res}
          else
            res = (res ++ [Enum.at(list.data, i)])
            {removed, res}
          end
          i = i + 1
          while_fun_4.(while_fun_4, i, removed, res)
        else
          {i, removed, res}
        end
      end
      {i, removed, res} = try do
          while_fun_4.(while_fun_4, i, removed, res)
        catch
          {:break, {i, removed, res}} -> {i, removed, res}
        end

      throw {:return, %{list: %{data: res}, value: removed}}
    catch
      {:return, val} -> val
    end
  end
  def delete_head(list) do
    try do
      throw {:return, delete_nth(list, 0)}
    catch
      {:return, val} -> val
    end
  end
  def delete_tail(list) do
    try do
      throw {:return, delete_nth(list, _len(Map.get(list, :data, [])) - 1)}
    catch
      {:return, val} -> val
    end
  end
  def delete_value(list, value) do
    try do
      idx = 0
      found = false
      while_fun_5 = fn while_fun_5, found, idx ->
        if idx < _len(Map.get(list, :data, [])) do
          {found} = if Enum.at(list.data, idx) == value do
            found = true
            throw {:break, {found, idx}}
            {found}
          else
            {found}
          end
          idx = idx + 1
          while_fun_5.(while_fun_5, found, idx)
        else
          {found, idx}
        end
      end
      {found, idx} = try do
          while_fun_5.(while_fun_5, found, idx)
        catch
          {:break, {found, idx}} -> {found, idx}
        end

      if !found do
        raise("value not found")
      end
      throw {:return, delete_nth(list, idx)}
    catch
      {:return, val} -> val
    end
  end
  def main() do
    try do
      dll = empty_list()
      dll = insert_tail(dll, 1)
      dll = insert_tail(dll, 2)
      dll = insert_tail(dll, 3)
      IO.puts(to_string(dll))
      dll = insert_head(dll, 0)
      IO.puts(to_string(dll))
      dll = insert_nth(dll, 2, 9)
      IO.puts(to_string(dll))
      res = delete_nth(dll, 2)
      dll = res.list
      IO.puts(res.value)
      IO.puts(to_string(dll))
      res = delete_tail(dll)
      dll = res.list
      IO.puts(res.value)
      IO.puts(to_string(dll))
      res = delete_value(dll, 1)
      dll = res.list
      IO.puts(res.value)
      IO.puts(to_string(dll))
    catch
      {:return, val} -> val
    end
  end
  def bench_main() do
    :erlang.garbage_collect()
    mem_start = _mem()
    t_start = _bench_now()
    main()
    mem_end = _mem()
    duration_us = max(_bench_now() - t_start, 1)
    :erlang.garbage_collect()
    mem_diff = abs(mem_end - mem_start)
    IO.puts("{\n  \"duration_us\": #{duration_us},\n  \"memory_bytes\": #{mem_diff},\n  \"name\": \"main\"\n}")
  end
end
Main.bench_main()
